# perpetual-opus-public

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.md  PROJECT_SUMMARY.md  README.md  SETUP.md  context_loader.py  pytest.ini  requirements.txt
.claude-rag/: .gitignore  README.md  config.json.example  hybrid_indexer.py  hybrid_search.py  install_hooks.py  mcp_server.py  migrate_db.py  preembed.py  reindex_repo.py  scheduled_reindex.py  search_core.py  setup_scheduled_task.ps1  verify_implementation.py
agent/: __init__.py  config.py  heartbeat.py  hooks.py  report.py  requirements.txt  runner.py  session.py
architecture/: 2026-01-09_nervous_system_architecture.md  2026-01-10_music-to-tokens-bridge.md  2026-01-10_orchestrator_sketch.md  README.md  architecture_notes.md  bounded_perturbation.md  interoception_architecture.md
drops/: README.md  inbox.py
files/: EXAMPLE_becoming.md  EXAMPLE_foundation.md  EXAMPLE_human.md  EXAMPLE_identity.md  EXAMPLE_voice.md  README.md  consolidation_protocol.md  framework.md  session_orientation.md  vocabulary_references.md  vocabulary_roadmap.md
saliency-detector/: CALIBRATION.md  PLANNING.md  README.md  add_salience_to_chunks.py  calibrate.py  detect.py  migrate_speaker_labels.py  pyproject.toml  saliency_detector_draft_from_conversation.py
saliency-detector/saliency/: __init__.py  cli.py  formatters.py  heuristics.py  parser.py  scorer.py
tests/: README.md  REVIEW_FINDINGS.md  conftest.py
texture-chunker/: README.md  chunk_conversation_md.py  classify_chunks_openrouter.py  classify_chunks_openrouter_async.py  clean_chunks.py  (+6 more)
(+79 files in other folders)
