[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saliency-detector"
version = "0.1.0"
description = "Detect salient moments in conversation transcripts"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = []

[project.optional-dependencies]
llm = ["httpx>=0.24.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.scripts]
saliency = "saliency.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["saliency*"]
